vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__object_declaration__tests__constant_missing_default_expression.snap
---
source: vhdl_syntax/src/parser/productions/object_declaration.rs
expression: "$crate :: parser :: test_utils :: render_recovery(code, & tree, & diags)"
---
== source ==
constant width : integer := ;

== tree ==
ConstantDeclaration
  Keyword(Constant)
  IdentifierList
    Identifier 'width'
  Colon
  SubtypeIndication
    Name
      NameDesignatorPrefix
        Identifier 'integer'
  InitialValue
    ColonEq
  SemiColon

== diagnostics ==
1:28 Expected(Token([Identifier, LtLt, BitStringLiteral, CharacterLiteral, StringLiteral, Keyword(Null), AbstractLiteral, LeftPar, Keyword(New)]))
