vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__object_declaration__tests__signal_missing_type.snap
---
source: vhdl_syntax/src/parser/productions/object_declaration.rs
expression: "$crate :: parser :: test_utils :: render_recovery(code, & tree, & diags)"
---
== source ==
signal clk : ;

== tree ==
SignalDeclaration
  Keyword(Signal)
  IdentifierList
    Identifier 'clk'
  Colon
  SemiColon

== diagnostics ==
1:13 Expected(Token([Identifier, StringLiteral, CharacterLiteral]))
