vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__object_declaration__tests__variable_missing_identifier.snap
---
source: vhdl_syntax/src/parser/productions/object_declaration.rs
expression: "$crate :: parser :: test_utils :: render_recovery(code, & tree, & diags)"
---
== source ==
variable : integer;

== tree ==
VariableDeclaration
  Keyword(Variable)
  Colon
  SubtypeIndication
    Name
      NameDesignatorPrefix
        Identifier 'integer'
  SemiColon

== diagnostics ==
1:9 Expected(Node([IdentifierList]))
